# InstaLab

./: .codespell-ignore.txt  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  README.md  pyproject.toml
experiment_configs/: BIO_agentrxiv.yaml
instalab/: __init__.py  agents.py  ai_lab_repo.py  inference.py  papersolver.py  tools.py  utils.py
state_saves/: Paper0.pkl
